Changelog
=========

2019.5.1 (unreleased)
---------------------

- Always use API for OfficeConnector. [njohner]
- Refactor solrsearch and listing endpoints. [njohner]
- Add tests for solrsearch and listing endpoints. [njohner]
- Split invitations from participations endpoints. [njohner]
- Make and enforce unicode for webaction owner and groups. [njohner]
- Implement testing against a real Solr. [lgraf]
- Sharing on workspace folders should always show workspace users. [njohner]
- Replace @participations endpoint with @invitations endpoint accepting slightly different parameters. [deiferni]


2019.5.0 (2019-12-10)
---------------------

- Bump ftw.solr to 2.8.0 to get support for uploading blobs. [lgraf]
- Add custom IWarmupPerformer to also warm up GEVER's trashed index. [lgraf]


2019.5.0rc1 (2019-12-03)
------------------------

- Make Period a proper plone content type. Migrate old SQL base periods. [deiferni]
- Restrict available users in sharing on workspaces and workspace folders. [njohner]
- Correct styling bug fix in tabbedview after showing bumblebee tooltip. [njohner]


2019.4.2 (2019-11-29)
---------------------

- Register virtual host monster on site setup for testserver [bierik]
- Catch oneoffixx api calls failures and show statusmessage instead. [phgross]
- Fix setting agenda item description. [deiferni]
- Fix automatic start of additionally added sequential tasks. [phgross]
- Fix styling bug in tabbedview after showing bumblebee tooltip. [njohner]
- Only show workspace notification tab when feature is activated. [njohner]
- Fix response text for responsible changes to the same user. [phgross]
- Do not manipulate the persisten journal list on @history get. [phgross]
- Fix authorization handling when fetching the template_group_id. [phgross]
- Do not add document modified journal entry when saving file with OC RESTAPI. [njohner]
- Do not manipulate the persistent journal list on @journal get. [phgross]


2019.4.1 (2019-11-26)
---------------------
